--- a/trunk/proj3/relatorio.tex
+++ b/trunk/proj3/relatorio.tex
@@ -185,12 +185,12 @@ Desvio padrão: \textbf{10,72 us}\\
 \textbf{Configuração 2: }\\
 Média do tempo de RTT: \textbf{1601,7 us}\\
 Desvio padrão: \textbf{1697,68 us}\\
-\begin{figure}[htb]
-  \centering
-  \includegraphics[width=15cm]{rtt.png} 
-  \caption{Representação das medições para o RTT.}
-  \label{fig:rtt}
-\end{figure}
+%\begin{figure}[htb]
+%  \centering
+%  \includegraphics[width=15cm]{rtt.png} 
+%  \caption{Representação das medições para o RTT.}
+%  \label{fig:rtt}
+%\end{figure}
 
 \subsection{Tempo de Consulta}
 Tempo decorrido entre o cliente realizar o caso de uso 1 (consulta completa de todos os filmes do banco de dados).\\
@@ -200,12 +200,12 @@ Desvio padrão: \textbf{432,29 us}\\
 \textbf{Configuração 2: }\\
 Média do tempo de RTT: \textbf{9390,89 us}\\
 Desvio padrão: \textbf{9758,98 us}\\
-\begin{figure}[htb]
-  \centering
-  \includegraphics[width=15cm]{consulta.png} 
-  \caption{Representação das medições para a consulta.}
-  \label{fig:rtt}
-\end{figure}
+%\begin{figure}[htb]
+%  \centering
+%  \includegraphics[width=15cm]{consulta.png} 
+%  \caption{Representação das medições para a consulta.}
+%  \label{fig:rtt}
+%\end{figure}
 
 
 Pode-se verificar a diferença considerável entre os tempos de RTT para as duas configurações. Obviamente, o tempo para abertura da conexão foi maior para a segunda 
@@ -1817,12 +1817,12 @@ clean:
 \end{verbatim}
 
 \section{Anexo}
-\begin{figure}[htb]
-  \centering
-  \includegraphics[width=15cm]{medicoes.png} 
-  \caption{Representação das medições para a consulta.}
-  \label{fig:rtt}
-\end{figure}
+%\begin{figure}[htb]
+%  \centering
+%  \includegraphics[width=15cm]{medicoes.png} 
+%  \caption{Representação das medições para a consulta.}
+%  \label{fig:rtt}
+%\end{figure}
 
 \begin{thebibliography}{99}
 \bibitem{R1} HALL, Brian. Beej's Guide to Network Programming. Disponível em: http://http://beej.us/guide/bgnet/output/html/multipage/index.html.
