--- a/proj3/relatorio.tex
+++ b/proj3/relatorio.tex
@@ -108,58 +108,62 @@ Mostrar a quantidade de votos o filme teve e qual foi a pontuação obtida.
 \subsection{Avaliar um filme (*)}
 Dar uma pontuação ao filme com o dado ID.
 
-%% Corrigi até esse ponto ----------------------------------------%%
 
 \section{Implementação}
 O sistema é desenvolvido na linguagem Java, utiliza as bibliotecas RMI "java.rmi.*" para fazer a comunicação pela rede e gerencia as várias conexões automaticamente, conseguido pelo alto nível de abstração oferecida pela linguagem Java.\\
 Primeiramente vamos explicar como foi implementado o banco de dados e suas operações, e depois explicar como é feita a comunicação entre o servidor e o cliente e como é feita a comunicação entre eles.\\
-%Explicar o funcionamento do sistema
-Basicamente, o funcionamento do sistema é: o servidor fica em um laço infinito, aguardando requisições de conexão; o cliente estabelece essa conexão; inicia-se uma sequencia de requisições do cliente e respostas por parte do servidor; cliente encerra o uso.\\
+Basicamente, o funcionamento do sistema é: o servidor é um objeto instanciado na máquina virtual Java que publica seus métodos para serem acessados remotamente e aguarda requisições de conexão; o cliente procura pelo servidor através dp RMI Registry no endereço especificado, que libera o acesso do cliente ao servidor; inicia-se uma sequencia de requisições do cliente e respostas por parte do servidor; cliente encerra o uso.\\
 
 %Ao terminar o projeto, fazer um word count e ver quantas linhas deu, e fazer um comentário
-No fim, a quantidade de linhas de código de todos os arquivos do sistema (*.c e *.h) é 1461, o que já não é um programa simples, porém ainda está longe de ser uma grande aplicação.\\
+No fim, a quantidade de linhas de código de todos os arquivos do sistema (*.java) é (NUMERO DE LINHAS), o que já não é um programa simples, porém ainda está longe de ser uma grande aplicação.\\
 
 Para organizar a discussão sobre a implementação, vamos tratar de tópicos separamente.\\
 
 \subsection{Dados}
 \subsubsection{Armazenamento (banco de dados)}
-Ao invés de usar um sistema de gerenciamento de banco de dados (SGDB) optamos, pela praticidade, armazenar todos os nossos dados em um arquivo de texto puro chamado "filmes.dat" onde os campos que contém os atributos de um filme são separados pelo caractere '@' . Um registro da base de dados tem o seguinte formato:\\
-\textit{tamanho do registro@ID@avaliações@média@título@sinopse@sala@horários@}\\
-Com relação aos tipos dos dados, \textit{tamanho do registro} e \textit{ID} são numéricos, inteiros, de tamanho variável com limites de 1024 para o primeiro e $10^{20}$ - 1 para o segundo. Vale ressaltar que estes são os dois únicos campos de tamanho fixo da representação, com 4 dígitos para o primeiro e 6 (incluindo o ponto decimal) para o segundo.\\
-\textit{Número de avaliações} e \textit{média} são numéricos, com o primeiro inteiro até 9999 e o segundo, ponto flutuante de 0 a 999, com duas casas decimais (000.00 a 999.99).\\
-\textit{Título} (30), \textit{Sinopse} (900), \textit{Sala} (20) e \textit{Horários} (20) são cadeias de caracteres (\textit{strings}), com seus respectivos tamanhos citados.\\
-Segue um exemplo de uma entrada no banco de dados:\\
-\textit{279@1@0000@000.00@Rei Leão@Sinopse do filme@sala10@10h, 12h30, 15h@}\\
-Nota: Para facilitar a inserção de novos filmes no sistema, foi feito um script (add\_filme.sh) que pode ser visto na seção 7.1.
+%TODO
+%Ao invés de usar um sistema de gerenciamento de banco de dados (SGDB) optamos, pela praticidade, armazenar todos os nossos dados em um arquivo de texto puro chamado "filmes.dat" onde os campos que contém os atributos de um filme são separados pelo caractere '@' . Um registro da base de dados tem o seguinte formato:\\
+%\textit{tamanho do registro@ID@avaliações@média@título@sinopse@sala@horários@}\\
+%Com relação aos tipos dos dados, \textit{tamanho do registro} e \textit{ID} são numéricos, inteiros, de tamanho variável com limites de 1024 para o primeiro e $10^{20}$ - 1 para o segundo. Vale ressaltar que estes são os dois únicos campos de tamanho fixo da representação, com 4 dígitos para o primeiro e 6 (incluindo o ponto decimal) para o segundo.\\
+%\textit{Número de avaliações} e \textit{média} são numéricos, com o primeiro inteiro até 9999 e o segundo, ponto flutuante de 0 a 999, com duas casas decimais (000.00 a 999.99).\\
+%\textit{Título} (30), \textit{Sinopse} (900), \textit{Sala} (20) e \textit{Horários} (20) são cadeias de caracteres (\textit{strings}), com seus respectivos tamanhos citados.\\
+%Segue um exemplo de uma entrada no banco de dados:\\
+%\textit{279@1@0000@000.00@Rei Leão@Sinopse do filme@sala10@10h, 12h30, 15h@}\\
+%Nota: Para facilitar a inserção de novos filmes no sistema, foi feito um script (add\_filme.sh) que pode ser visto na seção 7.1.
+
 \subsubsection{Estruturas de dados}
-Existem duas formas básicas de como os dados de um filme são representados em memória: como uma cadeia crua de caracteres e como uma estrutura chamada \textbf{filme}.\\
-A primeira opção, mais simples, é usada na extração dos dados do arquivo e na transmissão destes pela rede.\\
-Já a segunda, agrega as informações de forma mais coerente, facilitando a implementação de funções que precisam acessar os dados de um filme para, por exemplo, imprimi-los na tela. A definição desta estrutura pode ser vista no arquivo data\_access.h (biblioteca de especificações sobre o acesso aos dados), localizado na seção 7.2.\\
+%TODO
+%Existem duas formas básicas de como os dados de um filme são representados em memória: como uma cadeia crua de caracteres e como uma estrutura chamada \textbf{filme}.\\
+%A primeira opção, mais simples, é usada na extração dos dados do arquivo e na transmissão destes pela rede.\\
+%Já a segunda, agrega as informações de forma mais coerente, facilitando a implementação de funções que precisam acessar os dados de um filme para, por exemplo, imprimi-los na tela. A definição desta estrutura pode ser vista no arquivo data\_access.h (biblioteca de especificações sobre o acesso aos dados), localizado na seção 7.2.\\
 
 \subsection{Comunicação Cliente-Servidor}
-Todas as funcionalidades aqui descritas encontram-se especificadas no arquivo internet.h (7.4) e implementadas em internet.c (7.5).\\
-A fim de facilitar a utilização das funções de envio e recebimento de informações, foram implementadas as funções \textit{socket\_push\_char()}, \textit{socket\_pop\_char()}, \textit{socket\_push\_buffer()} e \textit{socket\_pop\_buffer()}. As duas primeiras se encarregam de enviar para e retirar da conexão com o socket, um único caractere. Como trabalhamos com tamanhos variáveis de atributos, é bastante útil comparar cada caractere lido da stream antes de fazer a próxima leitura.\\
-Já as outras duas, uma envia outra recebe um buffer, uma cadeia de caracteres da conexão. Mais útil e eficiente para transportar grandes lotes de informações de uma só vez.\\
-Analisando o número de \textit{send()}s e \textit{recv()}s, certamente a comunicação caractere por caractere é muito despendiosa, pois cada mensagem de 1 byte é empacotada e enviada às camadas mais baixas da rede. Certamente essa não foi a melhor escolha possível, mas facilitou em grande parte o trabalho de verificação do fim de cada atributo.
+%TODO
+%Todas as funcionalidades aqui descritas encontram-se especificadas no arquivo internet.h (7.4) e implementadas em internet.c (7.5).\\
+%A fim de facilitar a utilização das funções de envio e recebimento de informações, foram implementadas as funções \textit{socket\_push\_char()}, \textit{socket\_pop\_char()}, \textit{socket%\_push\_buffer()} e \textit{socket\_pop\_buffer()}. As duas primeiras se encarregam de enviar para e retirar da conexão com o socket, um único caractere. Como trabalhamos com tamanhos variáveis de atributos, é bastante útil comparar cada caractere lido da stream antes de fazer a próxima leitura.\\
+%Já as outras duas, uma envia outra recebe um buffer, uma cadeia de caracteres da conexão. Mais útil e eficiente para transportar grandes lotes de informações de uma só vez.\\
+%Analisando o número de \textit{send()}s e \textit{recv()}s, certamente a comunicação caractere por caractere é muito despendiosa, pois cada mensagem de 1 byte é empacotada e enviada às camadas mais baixas da rede. Certamente essa não foi a melhor escolha possível, mas facilitou em grande parte o trabalho de verificação do fim de cada atributo.
 
 \subsection{Concorrência}
-A despeito da referência do Beej's, decidimos por implementar a concorrência através do uso de threads, e fomos muito felizes nessa decisão. A implementação está dentro do arquivo server.c, na seção 7.7.\\
-Dentro do main() do servidor, existe um laço infinito, cuja responsabilidade é, ao chegar uma nova conexão, alocar uma thread disponível para tratá-la (através da função trata\_thread()). O controle das threads disponíveis é feito através de um vetor global available\_thrs[].\\
-A partir de impressões de mensagens na saída padrão, é possível verificar facilmente o comportamento multi-usuário do servidor. Além de aceitar conexões simultâneas, pode-se forçar mais conexões do que o disponível, o que faz com que o servidor recuse a conexão. Se o cliente quiser tentar mais uma vez posteriormente, ele pode.
+%TODO
+%A despeito da referência do Beej's, decidimos por implementar a concorrência através do uso de threads, e fomos muito felizes nessa decisão. A implementação está dentro do arquivo server.c, na seção 7.7.\\
+%Dentro do main() do servidor, existe um laço infinito, cuja responsabilidade é, ao chegar uma nova conexão, alocar uma thread disponível para tratá-la (através da função trata\_thread()). O controle das threads disponíveis é feito através de um vetor global available\_thrs[].\\
+%A partir de impressões de mensagens na saída padrão, é possível verificar facilmente o comportamento multi-usuário do servidor. Além de aceitar conexões simultâneas, pode-se forçar mais conexões do que o disponível, o que faz com que o servidor recuse a conexão. Se o cliente quiser tentar mais uma vez posteriormente, ele pode.
 
 \subsection{Exclusão Mútua}
-Decidimos implementar a funcionalidade de avaliação de filme no nosso projeto, o que implicou na necessidade de prover uma maneira segura de garantir que threads concorrentes não fariam escritas no arquivo de modo inconsistente.\\
-O cenário de inconsistência é o seguinte: a thread T1 lê o número de avaliações N0 e média M0 do arquivo e processa novos valores N1 e M1 a partir da avaliação do cliente. Então, antes de T1 atualizar os dados no arquivo, a thread T2 lê N0 e M0 arquivo e calcula seus valores N2 e M2. Aconteça o que acontecer, os dados estarão inconsistentes, pois as operações não estarão sendo cumulativas, como espera-se que sejam.\\
-O meio de implementação da exclusão mútua entre as threads foi utilizando semáforos, conforme pode-se ver em server.c (7.7).\\
-Como todas as threads funcionam com a mesma função, e foi possível fazer a separação clara entre cada caso de uso, foi simples estabelecer a região crítica (que não pode nunca ser executada por mais de uma thread ao mesmo tempo).\\
-Além disso, sendo o caso de escrita concorrente em arquivo, o semáforo é iniciado com o valor 1, permitindo que apenas uma thread possa utilizar o recurso de cada vez.
+%TODO
+%Decidimos implementar a funcionalidade de avaliação de filme no nosso projeto, o que implicou na necessidade de prover uma maneira segura de garantir que threads concorrentes não fariam escritas no arquivo de modo inconsistente.\\
+%O cenário de inconsistência é o seguinte: a thread T1 lê o número de avaliações N0 e média M0 do arquivo e processa novos valores N1 e M1 a partir da avaliação do cliente. Então, antes de T1 atualizar os dados no arquivo, a thread T2 lê N0 e M0 arquivo e calcula seus valores N2 e M2. Aconteça o que acontecer, os dados estarão inconsistentes, pois as operações não estarão sendo cumulativas, como espera-se que sejam.\\
+%O meio de implementação da exclusão mútua entre as threads foi utilizando semáforos, conforme pode-se ver em server.c (7.7).\\
+%Como todas as threads funcionam com a mesma função, e foi possível fazer a separação clara entre cada caso de uso, foi simples estabelecer a região crítica (que não pode nunca ser executada por mais de uma thread ao mesmo tempo).\\
+%Além disso, sendo o caso de escrita concorrente em arquivo, o semáforo é iniciado com o valor 1, permitindo que apenas uma thread possa utilizar o recurso de cada vez.
 
 
 \section{Análise de Tempo}
 Para a análise de tempo, foram consideradas duas operações a serem analisadas: tempo de comunicação (RTT) e consulta ao servidor.\\
-Para se obter uma boa precisão, foi utilizada a função "gettimeofday", que tem a precisão em microsegundos, o que já é boa o suficiente para nossa aplicação. A função pega o tempo atual em que foi chamada, portanto, para calcular o tempo de alguma operação, basta calcular o tempo antes e depois da operação e calcular a diferença entre eles.\\
+Para se obter uma boa precisão, foi utilizada a função "System.nanoTime()", que tem a precisão em nanosegundos, que será convertida em microsegundos, o que é boa o suficiente para nossa aplicação. A função pega o tempo atual em que foi chamada, portanto, para calcular o tempo de alguma operação, basta calcular o tempo antes e depois da operação e calcular a diferença entre eles.\\
 Foram usadas duas configurações:\\
-\textbf{Configuração 1: }Dois computadores presentes na mesma sub-rede (SIFEEC).\\
+\textbf{Configuração 1: }Dois computadores presentes na mesma sub-rede (IC3).\\
 IP local: 143.106.150.81\\
 IP remoto: 143.106.150.80\\
 \textbf{Configuração 2: }Um computador no laboratório do IC3 e outro no SIFEEC.\\
