--- a/proj3/relatorio.tex
+++ b/proj3/relatorio.tex
@@ -81,12 +81,12 @@
 
 
 \begin{abstract}
-Este projeto consiste da implementação de um sistema, que implementa comunicação em rede, baseado no paradigma cliente-servidor, motivado pela provisão de acesso a uma base de dados de filmes. Para a comunicação entre cliente e servidor, foi utilizado o Java RMI - \textit{Remote Method Invocation}, foram feitas análises quanto ao desempenho da aplicação e uma comparação desse sistema de mais alto nível com o sistema anterior implementado em C que tem um nível de abstração mais baixo.
+Este projeto consiste da implementação de um sistema de comunicação em rede, baseado no paradigma cliente-servidor, motivado pela provisão de acesso a uma base de dados de filmes. Para a comunicação entre cliente e servidor, foi utilizado o Java RMI - \textit{Remote Method Invocation}. Foram ainda realizadas análises quanto ao desempenho da aplicação e uma comparação desse sistema de mais alto nível com o sistema do projeto anterior, implementado em C, a um nível de abstração mais baixo.
 \end{abstract}
 
 \section{Introdução}
 Nos dia de hoje é comum se ter qualquer tipo de informação de forma rápida e prática através da internet, como mapas, receitas, notícias, preços de mercado, cotação das moedas do mundo todo, etc. De tudo que se pode fazer pela internet, a área que mais cresce é a de prestação de serviços, onde já se pode fazer compras, pagar contas, fazer transações bancárias dentre várias outras coisas, e um desses tipos de serviço será implementado pelo nosso projeto.\\
-Nosso projeto irá implementar um servidor Java multi-usuário utilizando RMI comunicação e SQL para consultas em bancos de dados de um cinema, onde são armazenadas várias informações sobre os filmes em cartaz, como o título, sinopse, horário das sessões e as salas.\\
+Nosso projeto irá implementar um servidor Java multi-usuário utilizando RMI para comunicação e SQL para consultas em banco de dados de um cinema, onde são armazenadas várias informações sobre os filmes em cartaz, como o título, sinopse, horário das sessões e as salas.\\
 O intuito é de centralizar as informações dos filmes em um único local, evitando que cada cliente tenha que ficar se sincronizando toda vez que for fazer uma consulta; além de tornar o programa cliente leve e livre da carga de processamento necessário para as consultas, permitindo assim que aparelhos com poder de processamento menor como celulares ou palm-tops também possam executar o programa sem problemas.\\
 Iremos criar os 2 aplicativos, o servidor e o cliente, e também criaremos o protocolo de comunicação entre os 2, e esse protocolo será baseado em objetos invocados remotamente através do Java RMI.\\
 A seção 2 irá especificar o que exatamente o programa deve fazer; a seção 3 irá comentar mais detalhadamente a implementação, as definições, suposições tomadas e ferramentas utilizadas; a seção 4 irá analisar o desempenho da aplicação atraveś de várias medidas de tempo; a seção 5 irá mostrar quão confiável e consistente é a aplicação; na seção 6 encontra-se uma breve conclusão sobre o projeto e, por último, na seção 7 estará o código fonte necessário para compilar e executar o servidor e o cliente.
@@ -119,23 +119,17 @@ No fim, a quantidade de linhas de código de todos os arquivos do sistema (*.jav
 
 Para organizar a discussão sobre a implementação, vamos tratar de tópicos separamente.\\
 
-\subsection{Dados}
-\subsubsection{Armazenamento (banco de dados)}
-%TODO
-%Ao invés de usar um sistema de gerenciamento de banco de dados (SGDB) optamos, pela praticidade, armazenar todos os nossos dados em um arquivo de texto puro chamado "filmes.dat" onde os campos que contém os atributos de um filme são separados pelo caractere '@' . Um registro da base de dados tem o seguinte formato:\\
-%\textit{tamanho do registro@ID@avaliações@média@título@sinopse@sala@horários@}\\
-%Com relação aos tipos dos dados, \textit{tamanho do registro} e \textit{ID} são numéricos, inteiros, de tamanho variável com limites de 1024 para o primeiro e $10^{20}$ - 1 para o segundo. Vale ressaltar que estes são os dois únicos campos de tamanho fixo da representação, com 4 dígitos para o primeiro e 6 (incluindo o ponto decimal) para o segundo.\\
-%\textit{Número de avaliações} e \textit{média} são numéricos, com o primeiro inteiro até 9999 e o segundo, ponto flutuante de 0 a 999, com duas casas decimais (000.00 a 999.99).\\
-%\textit{Título} (30), \textit{Sinopse} (900), \textit{Sala} (20) e \textit{Horários} (20) são cadeias de caracteres (\textit{strings}), com seus respectivos tamanhos citados.\\
-%Segue um exemplo de uma entrada no banco de dados:\\
-%\textit{279@1@0000@000.00@Rei Leão@Sinopse do filme@sala10@10h, 12h30, 15h@}\\
-%Nota: Para facilitar a inserção de novos filmes no sistema, foi feito um script (add\_filme.sh) que pode ser visto na seção 7.1.
+\subsection{Banco de Dados}
+Utilizamos o SQLite, uma plataforma que implementa as funcionalidades básicas de um SGDB relacional, mas de modo mais simples. Ela utiliza um único arquivo para o banco (que chamamos de filmes.db). A definição dos dados é apresentada na seção do código do sistema, no arquivo tabelas.sql.\\
+O uso deste software nos deu duas facilidades: a facilidade de comunicação com a camada de persistência (uso de SQL para consultas e alterações nos dados) e a transparência quanto à garantia de acesso concorrente aos dados.\\
+Destaca-se, para este último ponto, o uso do \textit{Driver} para conexão com o banco de dados: sqlitejdbc.jar. Cada conexão aberta pelo servidor é como um programa sqlite3 rodando a partir do arquivo do banco de dados. Assim, a exclusão mútua para as operações de escrita no banco é garantida tanto pela descrição da conexão do JDBC como pelo tratamento de conexões por parte do SQLite.\\
+Com relação à implementação, foi criado um pacote chamado bd, com as classes:
+\begin{itemize}
+  \item ConnectionFactory: implementa a abstração para estabelecimento de conexão com o banco de dados.
+  \item DataAccess: abstração para o acesso aos dados do banco. É onde são utilizados os comandos SQL.
+  \item Filme: mapeia o tipo de dado da tabela filme para o sistema.
+\end{itemize}
 
-\subsubsection{Estruturas de dados}
-%TODO
-%Existem duas formas básicas de como os dados de um filme são representados em memória: como uma cadeia crua de caracteres e como uma estrutura chamada \textbf{filme}.\\
-%A primeira opção, mais simples, é usada na extração dos dados do arquivo e na transmissão destes pela rede.\\
-%Já a segunda, agrega as informações de forma mais coerente, facilitando a implementação de funções que precisam acessar os dados de um filme para, por exemplo, imprimi-los na tela. A definição desta estrutura pode ser vista no arquivo data\_access.h (biblioteca de especificações sobre o acesso aos dados), localizado na seção 7.2.\\
 
 \subsection{Comunicação Cliente-Servidor}
 %TODO
@@ -143,20 +137,6 @@ Para organizar a discussão sobre a implementação, vamos tratar de tópicos se
 %A fim de facilitar a utilização das funções de envio e recebimento de informações, foram implementadas as funções \textit{socket\_push\_char()}, \textit{socket\_pop\_char()}, \textit{socket%\_push\_buffer()} e \textit{socket\_pop\_buffer()}. As duas primeiras se encarregam de enviar para e retirar da conexão com o socket, um único caractere. Como trabalhamos com tamanhos variáveis de atributos, é bastante útil comparar cada caractere lido da stream antes de fazer a próxima leitura.\\
 %Já as outras duas, uma envia outra recebe um buffer, uma cadeia de caracteres da conexão. Mais útil e eficiente para transportar grandes lotes de informações de uma só vez.\\
 %Analisando o número de \textit{send()}s e \textit{recv()}s, certamente a comunicação caractere por caractere é muito despendiosa, pois cada mensagem de 1 byte é empacotada e enviada às camadas mais baixas da rede. Certamente essa não foi a melhor escolha possível, mas facilitou em grande parte o trabalho de verificação do fim de cada atributo.
-
-\subsection{Concorrência}
-%TODO
-%A despeito da referência do Beej's, decidimos por implementar a concorrência através do uso de threads, e fomos muito felizes nessa decisão. A implementação está dentro do arquivo server.c, na seção 7.7.\\
-%Dentro do main() do servidor, existe um laço infinito, cuja responsabilidade é, ao chegar uma nova conexão, alocar uma thread disponível para tratá-la (através da função trata\_thread()). O controle das threads disponíveis é feito através de um vetor global available\_thrs[].\\
-%A partir de impressões de mensagens na saída padrão, é possível verificar facilmente o comportamento multi-usuário do servidor. Além de aceitar conexões simultâneas, pode-se forçar mais conexões do que o disponível, o que faz com que o servidor recuse a conexão. Se o cliente quiser tentar mais uma vez posteriormente, ele pode.
-
-\subsection{Exclusão Mútua}
-%TODO
-%Decidimos implementar a funcionalidade de avaliação de filme no nosso projeto, o que implicou na necessidade de prover uma maneira segura de garantir que threads concorrentes não fariam escritas no arquivo de modo inconsistente.\\
-%O cenário de inconsistência é o seguinte: a thread T1 lê o número de avaliações N0 e média M0 do arquivo e processa novos valores N1 e M1 a partir da avaliação do cliente. Então, antes de T1 atualizar os dados no arquivo, a thread T2 lê N0 e M0 arquivo e calcula seus valores N2 e M2. Aconteça o que acontecer, os dados estarão inconsistentes, pois as operações não estarão sendo cumulativas, como espera-se que sejam.\\
-%O meio de implementação da exclusão mútua entre as threads foi utilizando semáforos, conforme pode-se ver em server.c (7.7).\\
-%Como todas as threads funcionam com a mesma função, e foi possível fazer a separação clara entre cada caso de uso, foi simples estabelecer a região crítica (que não pode nunca ser executada por mais de uma thread ao mesmo tempo).\\
-%Além disso, sendo o caso de escrita concorrente em arquivo, o semáforo é iniciado com o valor 1, permitindo que apenas uma thread possa utilizar o recurso de cada vez.
 
 
 \section{Análise de Tempo}
