--- a/trunk/proj3/relatorio.tex
+++ b/trunk/proj3/relatorio.tex
@@ -156,10 +156,11 @@ IP remoto: 143.106.16.163 (xaveco)\\
 \subsection{Tempo de Comunicação}
 Tempo decorrido para realizar a conexão (RTT) e tempo total decorrido para o servidor responder a requisição do cliente.\\
 
-%TODO MODIFICAR OS TEMPO DE ACORDO COM AS NOSSAS TABELAS
 \textbf{Análise 1: }\\
-Média do tempo de RTT: \textbf{274,16 us}\\
-Desvio padrão: \textbf{10,72 us}\\
+Média do tempo de RTT: \textbf{1346 us}\\
+Desvio padrão RTT: \textbf{178 us}\\
+Média do tempo total de requisição: \textbf{2011 us}\\
+Desvio padrão de requisição: \textbf{572 us}\\
 \begin{figure}[htb]
   \centering
   \includegraphics[width=15cm]{analise1.png} 
@@ -168,8 +169,10 @@ Desvio padrão: \textbf{10,72 us}\\
 \end{figure}
 
 \textbf{Análise 2: }\\
-Média do tempo de RTT: \textbf{1601,7 us}\\
-Desvio padrão: \textbf{1697,68 us}\\
+Média do tempo de RTT: \textbf{1293 us}\\
+Desvio padrão RTT: \textbf{335 us}\\
+Média do tempo total de requisição: \textbf{1932 us}\\
+Desvio padrão de requisição: \textbf{909 us}\\
 \begin{figure}[htb]
   \centering
   \includegraphics[width=15cm]{analise2.png} 
@@ -178,8 +181,10 @@ Desvio padrão: \textbf{1697,68 us}\\
 \end{figure}
 
 \textbf{Análise 3: }\\
-Média do tempo de RTT: \textbf{274,16 us}\\
-Desvio padrão: \textbf{10,72 us}\\
+Média do tempo de RTT: \textbf{1355 us}\\
+Desvio padrão RTT: \textbf{182 us}\\
+Média do tempo total de requisição: \textbf{2043 us}\\
+Desvio padrão de requisição: \textbf{864 us}\\
 \begin{figure}[htb]
   \centering
   \includegraphics[width=15cm]{analise3.png} 
@@ -188,8 +193,10 @@ Desvio padrão: \textbf{10,72 us}\\
 \end{figure}
 
 \textbf{Análise 4: }\\
-Média do tempo de RTT: \textbf{1601,7 us}\\
-Desvio padrão: \textbf{1697,68 us}\\
+Média do tempo de RTT: \textbf{1424 us}\\
+Desvio padrão RTT: \textbf{606 us}\\
+Média do tempo total de requisição: \textbf{2065 us}\\
+Desvio padrão de requisição: \textbf{868 us}\\
 \begin{figure}[htb]
   \centering
   \includegraphics[width=15cm]{analise4.png} 
@@ -198,8 +205,10 @@ Desvio padrão: \textbf{1697,68 us}\\
 \end{figure}
 
 \textbf{Análise 5: }\\
-Média do tempo de RTT: \textbf{1601,7 us}\\
-Desvio padrão: \textbf{1697,68 us}\\
+Média do tempo de RTT: \textbf{1338 us}\\
+Desvio padrão RTT: \textbf{369 us}\\
+Média do tempo total de requisição: \textbf{1974 us}\\
+Desvio padrão de requisição: \textbf{846 us}\\
 \begin{figure}[htb]
   \centering
   \includegraphics[width=15cm]{analise5.png} 
