--- a/proj3/relatorio.tex
+++ b/proj3/relatorio.tex
@@ -132,11 +132,13 @@ Com relação à implementação, foi criado um pacote chamado bd, com as classe
 
 
 \subsection{Comunicação Cliente-Servidor}
-%TODO
-%Todas as funcionalidades aqui descritas encontram-se especificadas no arquivo internet.h (7.4) e implementadas em internet.c (7.5).\\
-%A fim de facilitar a utilização das funções de envio e recebimento de informações, foram implementadas as funções \textit{socket\_push\_char()}, \textit{socket\_pop\_char()}, \textit{socket%\_push\_buffer()} e \textit{socket\_pop\_buffer()}. As duas primeiras se encarregam de enviar para e retirar da conexão com o socket, um único caractere. Como trabalhamos com tamanhos variáveis de atributos, é bastante útil comparar cada caractere lido da stream antes de fazer a próxima leitura.\\
-%Já as outras duas, uma envia outra recebe um buffer, uma cadeia de caracteres da conexão. Mais útil e eficiente para transportar grandes lotes de informações de uma só vez.\\
-%Analisando o número de \textit{send()}s e \textit{recv()}s, certamente a comunicação caractere por caractere é muito despendiosa, pois cada mensagem de 1 byte é empacotada e enviada às camadas mais baixas da rede. Certamente essa não foi a melhor escolha possível, mas facilitou em grande parte o trabalho de verificação do fim de cada atributo.
+Utilizando-se da Orientação a Objetos, propriedade intrínsica da linguagem Java, pudemos implementar a aplicação a partir de um nível muito mais alto de abstração. A saber, temos duas classes principais: Cliente e Servidor. A abstração está no fato de que o objeto cliente utiliza o objeto remoto servidor como se fosse um objeto local. Dessa forma, a partir do momento que o cliente estabelece conexão com o objeto remoto do servidor (a partir do \textit{Registry}), as chamadas aos métodos remotos são transparentes ao cliente. Uma rápida observação é que, numa aplicação grande, que realmente pode acontecer de um programador não saber que se trata de um objeto remoto, pode-se fazer invocações de métodos de forma muito custosa.\\
+A classe Servidor implementa a interface RequestInterface, que por sua vez extende Remote. Desse modo, os métodos assinados em RequestInterface, e que são implementados no Servidor, são os métodos que ficam disponíveis a serem executados remotamente. Isso se dá com o cliente também tendo acesso a RequestInterface, mas ao instanciar de fato o objeto que implementa a interface, é feito o acesso à estrutura do RMI.\\
+Com a conexão estabelecida, o cliente simplesmente solicita requisições ao objeto servidor em forma de chamadas de método. Os parâmetros são os dados de entrada que o servidor precisa saber para a tarefa que o cliente quer; e o retorno corresponde às informações que o servidor dá ao cliente. Para facilitar a transparência na classe Cliente, foi criada uma classe que define métodos auxiliares: ClientAux.\\
+O servidor também utiliza de uma classe auxiliar, DataAccess, que implementa a forma como os dados são acessados no banco. O pacote bd contem as classes ConnectionFactory, DataAccess e Filme. Todas são utilizadas pelo servidor, e apenas Filme é usada pelo cliente, para a definição dos atributos que correspondem a um filme e funções para impressão dos dados.\\
+Existem duas requisições que solicitam filmes: todos os filmes do banco ou apenas um a partir de um ID. Nos dois casos, por facilidade de implementação, é retornada uma lista de filmes. Já que o ID entrado no cliente pode não corresponder a nenhum filme, a lista pode voltar vazia. Por fim, existe ainda o método remoto correspondente à avaliação, que recebe o ID e a nota do cliente, e retorna um Booleano, para o caso do filme não existir (retorno False).\\
+Como comentado anteriormente, com a transparência da exclusão mútua para os acessos de escrita, a implementação ficou bem concisa e robusta, de modo que até pelo número de linhas de código ficou clara a simplicidade gerada também pela abstração do RMI.\\
+Uma última observação, utilizamos um arquivo de definição das políticas de segurança \textit{policy}, apenas como exemplo de uso (já que o fizemos para permitir todos os acessos). A forma como a aplicação é executada pode ser vista nos scripts runserver.sh e runclient.sh.
 
 
 \section{Análise de Tempo}
