--- a/proj3/relatorio.tex
+++ b/proj3/relatorio.tex
@@ -112,7 +112,7 @@ Dar uma pontuação ao filme com o dado ID.
 \section{Implementação}
 O sistema é desenvolvido na linguagem Java, utiliza as bibliotecas RMI "java.rmi.*" para fazer a comunicação pela rede e gerencia as várias conexões automaticamente, conseguido pelo alto nível de abstração oferecida pela linguagem Java.\\
 Primeiramente vamos explicar como foi implementado o banco de dados e suas operações, e depois explicar como é feita a comunicação entre o servidor e o cliente e como é feita a comunicação entre eles.\\
-Basicamente, o funcionamento do sistema é: o servidor é um objeto instanciado na máquina virtual Java que publica seus métodos para serem acessados remotamente e aguarda requisições de conexão; o cliente procura pelo servidor através dp RMI Registry no endereço especificado, que libera o acesso do cliente ao servidor; inicia-se uma sequencia de requisições do cliente e respostas por parte do servidor; cliente encerra o uso.\\
+Basicamente, o funcionamento do sistema é: o servidor é um objeto instanciado na máquina virtual Java que publica seus métodos para serem acessados remotamente e aguarda requisições de conexão; o cliente procura pelo servidor através do RMI Registry no endereço especificado, que libera o acesso do cliente ao servidor; inicia-se uma sequência de requisições do cliente e respostas por parte do servidor; cliente encerra o uso.\\
 
 %Ao terminar o projeto, fazer um word count e ver quantas linhas deu, e fazer um comentário
 No fim, a quantidade de linhas de código de todos os arquivos do sistema (*.java) é 561, o que já não é um programa simples, porém ainda está longe de ser uma grande aplicação.\\
@@ -132,7 +132,7 @@ Com relação à implementação, foi criado um pacote chamado bd, com as classe
 
 
 \subsection{Comunicação Cliente-Servidor}
-Utilizando-se da Orientação a Objetos, propriedade intrínsica da linguagem Java, pudemos implementar a aplicação a partir de um nível muito mais alto de abstração. A saber, temos duas classes principais: Cliente e Servidor. A abstração está no fato de que o objeto cliente utiliza o objeto remoto servidor como se fosse um objeto local. Dessa forma, a partir do momento que o cliente estabelece conexão com o objeto remoto do servidor (a partir do \textit{Registry}), as chamadas aos métodos remotos são transparentes ao cliente. Uma rápida observação é que, numa aplicação grande, que realmente pode acontecer de um programador não saber que se trata de um objeto remoto, pode-se fazer invocações de métodos de forma muito custosa.\\
+Utilizando-se da Orientação a Objetos, propriedade intrínseca da linguagem Java, pudemos implementar a aplicação a partir de um nível muito mais alto de abstração. A saber, temos duas classes principais: Cliente e Servidor. A abstração está no fato de que o objeto cliente utiliza o objeto remoto servidor como se fosse um objeto local. Dessa forma, a partir do momento que o cliente estabelece conexão com o objeto remoto do servidor (a partir do \textit{Registry}), as chamadas aos métodos remotos são transparentes ao cliente. Uma rápida observação é que, numa aplicação grande, que realmente pode acontecer de um programador não saber que se trata de um objeto remoto, pode-se fazer invocações de métodos de forma muito custosa.\\
 A classe Servidor implementa a interface RequestInterface, que por sua vez extende Remote. Desse modo, os métodos assinados em RequestInterface, e que são implementados no Servidor, são os métodos que ficam disponíveis a serem executados remotamente. Isso se dá com o cliente também tendo acesso a RequestInterface, mas ao instanciar de fato o objeto que implementa a interface, é feito o acesso à estrutura do RMI.\\
 Com a conexão estabelecida, o cliente simplesmente solicita requisições ao objeto servidor em forma de chamadas de método. Os parâmetros são os dados de entrada que o servidor precisa saber para a tarefa que o cliente quer; e o retorno corresponde às informações que o servidor dá ao cliente. Para facilitar a transparência na classe Cliente, foi criada uma classe que define métodos auxiliares: ClientAux.\\
 O servidor também utiliza de uma classe auxiliar, DataAccess, que implementa a forma como os dados são acessados no banco. O pacote bd contem as classes ConnectionFactory, DataAccess e Filme. Todas são utilizadas pelo servidor, e apenas Filme é usada pelo cliente, para a definição dos atributos que correspondem a um filme e funções para impressão dos dados.\\
